--- a/todo/app/src/main/res/layout/layout_button.xml
+++ b/todo/app/src/main/res/layout/layout_button.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:text = "@string/button_delete"
+    android:id="@+id/btn_delete">
 
 </Button>
