--- a/todo/app/src/main/res/layout/item.xml
+++ b/todo/app/src/main/res/layout/item.xml
@@ -2,4 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="@string/textView1"
+        android:id="@+id/textView1"/>
 </RelativeLayout>
