--- a/todo/app/src/main/res/layout/main_layout.xml
+++ b/todo/app/src/main/res/layout/main_layout.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:id="@+id/main_layout">
+
+
+    <com.example.yalin.todolist.presenter.MyListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/my_listview">
+
+    </com.example.yalin.todolist.presenter.MyListView>
 
 </RelativeLayout>
