--- a/Study/MyApplication/app/src/main/res/layout-land/activity_quiz.xml
+++ b/Study/MyApplication/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,19 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal|center_vertical">
 
         <Button
             android:id="@+id/true_button"
@@ -31,7 +31,8 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal">
 
         <ImageButton
             android:id="@+id/Prev_button"
@@ -52,5 +53,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
-
+</FrameLayout>
