--- a/Study/MyApplication/app/src/main/res/layout-land/activity_quiz.xml
+++ b/Study/MyApplication/app/src/main/res/layout-land/activity_quiz.xml
@@ -34,6 +34,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal">
 
+        <Button
+            android:id="@+id/cheat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:text="@string/cheat_button"/>
+
         <ImageButton
             android:id="@+id/Prev_button"
             android:layout_width="wrap_content"
