--- a/Study/MyApplication/app/src/main/res/layout/activity_quiz.xml
+++ b/Study/MyApplication/app/src/main/res/layout/activity_quiz.xml
@@ -33,6 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cheat_button"
+            android:id="@+id/cheat_button"/>
+
         <ImageButton
             android:id="@+id/Prev_button"
             android:layout_width="wrap_content"
