20151002 Read to page 138

--- a/Study/MyApplication/app/src/main/res/layout/activity_quiz.xml
+++ b/Study/MyApplication/app/src/main/res/layout/activity_quiz.xml
@@ -57,6 +57,11 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/API_version"/>
+
 
 </LinearLayout>
 
