--- a/Study/CriminalIntent/app/src/main/res/layout/fragment_crime_camera.xml
+++ b/Study/CriminalIntent/app/src/main/res/layout/fragment_crime_camera.xml
@@ -21,4 +21,17 @@
             android:text="@string/take"/>
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/crime_camera_prograssContainer"
+        android:clickable="true">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@android:style/Widget.ProgressBar.Large"
+            android:layout_gravity="center"/>
+    </FrameLayout>
+
 </FrameLayout>
