--- a/Study/CriminalIntent/app/src/main/res/layout/fragment_crime.xml
+++ b/Study/CriminalIntent/app/src/main/res/layout/fragment_crime.xml
@@ -16,6 +16,14 @@
             android:orientation="vertical"
             android:layout_marginRight="4dp">
 
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/crime_imageView"
+                android:scaleType="centerInside"
+                android:background="@android:color/darker_gray"
+                android:cropToPadding="true"/>
+
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,5 +74,21 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:text="@string/crime_solved_label"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/crime_suspectButton"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/crime_suspect_text"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/crime_reportButton"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/crime_report_text"/>
 
 </LinearLayout>
